--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "scripts": {
-    "dev": "vite ./public",
+    "dev": "vite ./example",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
