--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -24,6 +24,6 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git checkout -b build
-          git add dist/
+          git add dist/ -f
           git commit -m "Add build artifacts"
           git push origin build
