--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -21,5 +21,7 @@ jobs:
         run: npm run build
       - name: Create build branch
         uses: peterjgrainger/action-create-branch@v2.0.1
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           branch: 'release'
