--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -20,8 +20,12 @@ jobs:
       - name: Build project
         run: npm run build
       - name: Create build branch
-        uses: peterjgrainger/action-create-branch@v2.0.1
-        env: 
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          branch: 'release'
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git checkout -b release
+          git add dist/ -f
+          git commit -m "Add build artifacts"
+          git push origin release
