--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -19,6 +19,23 @@ jobs:
         run: npm install
       - name: Build project
         run: npm run build
+      - name: Create build branch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git checkout -b release
+      - name: Delete everything except dist folder
+        run: |
+          shopt -s extglob
+          rm -rf !(dist)
+      - name: Commit build artifacts
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git add dist/ -f
+          git commit -m "Add build artifacts"
       - name: Create Release
         uses: actions/create-release@v1
         env:
